--- a/views/pb.handlebars
+++ b/views/pb.handlebars
@@ -21,40 +21,45 @@
 </div> <!-- end beach content -->
 
 <script type="text/javascript">
-//default values
+//prototypes and declarations
 var expansion = 0;
+function allShow(){
+$("#home").show();
+$("#home").show();
+$("#map").show();
+$("#activity").show();
+$("#crowd").show();
+$("#alert").show();
+$("#help").show();
+}
+function allHide(){
 $("#home").hide();
 $("#map").hide();
 $("#activity").hide();
 $("#crowd").hide();
 $("#alert").hide();
 $("#help").hide();
+}
 
+//may not work with different type of browsers
 function expandSidebar(){
 	console.log("clickable");
 	if(expansion == 0){
-	$("#home").show();
-	$("#home").show();
-	$("#map").show();
-	$("#activity").show();
-$("#crowd").show();
-$("#alert").show();
-$("#help").show();
-	$(".sidebar").css({width:'200px', background:"white"});
+	//$(".sidebar").css({width:'200px', background:"white"});
+	$(".sidebar").css({animation: "slideout 1s", width:'150px', background:"white"});
+	window.setTimeout('allShow()', 800);
 	$(".sbcontent").css({"z-index":'-1',"position":"relative",});
 	expansion = 1;
 	}else{
-	$("#home").hide();
-	$("#map").hide();
-	$("#activity").hide();
-$("#crowd").hide();
-$("#alert").hide();
-$("#help").hide();
-	$(".sidebar").css({width:'50px', background:"#00C9AD"});
+	allHide();
+	$(".sidebar").css({animation: "slidein 1s", width:'50px'});
+	window.setTimeout(function(){$(".sidebar").css({width:'50px', background:"#00C9AD"});}, 1000);
 	$(".sbcontent").css({"position":"relative", "z-index":"1"});
 	expansion = 0;
 	}
 }
+
+allHide(); //call default
 
 $( document ).ready(function() {
 	$(".sidebar").click( function(){ expandSidebar(); } );
