--- a/views/pb.handlebars
+++ b/views/pb.handlebars
@@ -45,16 +45,15 @@ $("#help").hide();
 function expandSidebar(){
 	console.log("clickable");
 	if(expansion == 0){
-	//$(".sidebar").css({width:'200px', background:"white"});
 	$(".sidebar").css({animation: "slideout 1s", width:'150px', background:"white"});
 	window.setTimeout('allShow()', 800);
-	$(".sbcontent").css({"z-index":'-1',"position":"relative",});
+	$(".sbcontent").css({"z-index":'-1'});
 	expansion = 1;
 	}else{
 	allHide();
-	$(".sidebar").css({animation: "slidein 1s", width:'50px'});
+	$(".sidebar").css({animation: "slidein 1s"});
 	window.setTimeout(function(){$(".sidebar").css({width:'50px', background:"#00C9AD"});}, 1000);
-	$(".sbcontent").css({"position":"relative", "z-index":"1"});
+	$(".sbcontent").css({ "z-index":"1"});
 	expansion = 0;
 	}
 }
