--- a/public/css/pb.css
+++ b/public/css/pb.css
@@ -19,8 +19,7 @@ body{
 	-moz-border-radius: 12px; /* FF1+ */
 	-webkit-border-radius: 12px; /* Saf3-4 */
   	border-radius: 12px; /* Opera 10.5, IE 9, Saf5, Chrome */	
-  	height: 60px; /* height for all three buttons on front page*/
-	background: #00C9AD;/*default background color for buttons*/
+	background: #F0DE62;/*default background color for buttons*/
 }
 
 a{
@@ -29,6 +28,14 @@ a{
 }
 
 /*///////////////////////////*/
+#back{
+	display:block;
+	text-align: left;
+	padding-left: 90px;
+	font-size: 20px;
+	width: 150px;
+	height: 30px;
+}
 @keyframes slideout{
 from {width:50px;}
 to {width:150px;}
