--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,7 +8,8 @@ body{
     width: 100%;
     display: block;
     background: white;/* background color of app*/
-    /*background-image: url('/images/bg.jpg');*/
+    /*background-image: url('/images/bg.jpg');
+    background-size:100% 100%;*/
 }
 
 /* #### Mobile Phones Portrait #### */
