--- a/public/css/pb.css
+++ b/public/css/pb.css
@@ -1,40 +1,40 @@
 body{
 	background: #00C9AD;
 	text-decoration: none;
+	/*background-image: url('/images/bg.jpg');
+    background-size:100% 100%;
+    background-repeat:no-repeat;*/
 }
-#pagename{
+.pagename{
+	width:50%;
 	font-size: 45px;
 	text-align: center;
+	position:relative;
+	z-index: 2;
 }
 #weather{
 	position:relative;
 	width: 100%;
 	z-index: -10;
 }
-.button{
-	margin:10px 0;
+
+.headline{
 	font-size:40px;
-	color:#000000; /* center font color*/
-	text-align: center;
+	width:100%;
 	-moz-border-radius: 12px; /* FF1+ */
 	-webkit-border-radius: 12px; /* Saf3-4 */
   	border-radius: 12px; /* Opera 10.5, IE 9, Saf5, Chrome */	
 	background: #F0DE62;/*default background color for buttons*/
 }
 
-a{
-	width:300px;
-	float:left;
+div a{
+	display: block;
 }
 
 /*///////////////////////////*/
-#back{
-	display:block;
-	text-align: left;
-	padding-left: 90px;
-	font-size: 20px;
-	width: 150px;
-	height: 30px;
+.arrow{
+	width:20%;
+	height: 50px;
 }
 @keyframes slideout{
 from {width:50px;}
@@ -73,9 +73,17 @@ to {width:50px;}
 }
 .beachcontent{
 	clear:both;
-}
+	background-image: url('/images/bg.jpg');
+    background-size:100% 100%;
+    background-repeat:no-repeat;
 
+}
 .tab{
 	clear:both;
 	width:100%;
+}
+.arrow img{
+	float:left;
+	width:50px;
+	height: 50px;
 }
