got beach list links

--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -26,5 +26,9 @@ $( document ).ready(function() {
 	//$("a").click( function(){ loadDummyContent("dummy") })
 	$("#back a").click(function() { window.location.href="/"; });
 	$("#Oceanside a").click( function(){ loadMainContent("ob") });
+	$("#MissionBay a").click( function(){ loadMainContent("mb") });
+	$("#Coronado a").click( function(){ loadMainContent("cb") });
+	$("#LaJolla a").click( function(){ loadMainContent("ljs") });
+	
 });
 </script>
