cb handlebar update

--- a/views/cb.handlebars
+++ b/views/cb.handlebars
@@ -4,7 +4,7 @@
 <div class="beachcontent">
 <div class="headline">
 <div class="arrow"><a href="#"><img src="/images/arrowicon.png"></a></div></div>
-<div class="pagename">PACIFIC BEACH</div>
+<div class="pagename">CORONADO BEACH</div>
 
 <div style="clear:both;"></div>
 <div class="centercontent">
