--- a/views/cb.handlebars
+++ b/views/cb.handlebars
@@ -15,8 +15,8 @@
 	<div class="tab"><div class="iconname" id="map"><a href='#'>MAP</a></div><img src="/images/mapicon.png" class="icon"/></div>
 	<div class="tab"><div class="iconname" id="activity"><a href='#'>ACTIVITY</a></div><img src="/images/activityicon2.png" class="icon"/></div>
 	<div class="tab"><div class="iconname" id="crowd"><a href='#'>CROWD</a></div><img src="/images/crowdicon.png" class="icon"/></div>
-	<div class="tab"><div class="iconname" id="alert"><a href='#'>ALERT</a></div><img src="/images/alerticon.png" class="icon"/></div>
-	<div class="tab"><div class="iconname" id="help"><a href='#'>HELP</a></div><img src="/images/helpicon.png" class="icon"/></div>
+	<!--div class="tab"><div class="iconname" id="alert"><a href='#'>ALERT</a></div><img src="/images/alerticon.png" class="icon"/></div-->
+	<!--div class="tab"><div class="iconname" id="help"><a href='#'>HELP</a></div><img src="/images/helpicon.png" class="icon"/></div-->
 </div>
 <div style="clear:both;"></div>
 <div class="sbcontent">
