--- a/views/surf.handlebars
+++ b/views/surf.handlebars
@@ -1,3 +1,9 @@
 <div class="title">{{beachname}}</div>
 <div class="comment">{{comment}}</div>
 <div class="height">{{height}}</div>
+
+<style>
+div .comment .title .height{
+	font-size:40px;
+}
+</style>
