--- a/views/cb.handlebars
+++ b/views/cb.handlebars
@@ -70,7 +70,8 @@ allHide(); //call default
 $( document ).ready(function() {
 	$(".sidebar").click( function(){ expandSidebar(); } );
 	$(".arrow a").click(function() { loadMainContent("beachlist") });
-	$("#surf").click(function(){loadBeachContent("cbsurf") });
+	$("#surf").click(function(){loadBeachContent("cbsurf.png") });
+	$("#crowd").click(function(){loadBeachContent("crowd.png") });
 	$("#login a").click( function(){ loadMainContent("LOGIN") });
 	$("#help a").click(function() { loadMainContent("HELP"); }); 
 	});
