--- a/views/ob.handlebars
+++ b/views/ob.handlebars
@@ -70,6 +70,7 @@ $( document ).ready(function() {
 	$(".sidebar").click( function(){ expandSidebar(); } );
 	$(".arrow a").click(function() { loadMainContent("beachlist") });
 	$("#surf").click(function(){loadBeachContent("obsurf.png") });
+	$("#crowd").click(function(){loadBeachContent("crowd.png") });
 	$("#login a").click( function(){ loadMainContent("LOGIN") });
 	$("#help a").click(function() { loadMainContent("HELP"); }); 
 	});
