got pages linked

--- a/views/ljs.handlebars
+++ b/views/ljs.handlebars
@@ -20,7 +20,7 @@
 </div>
 <div style="clear:both;"></div>
 <div class="sbcontent">
-	<img id="weather" src="/images/sun-cloud-512.png" alt="weather logo"/> 
+	<img id="weather" src="/images/ljsmain.png" alt="weather logo"/> 
 </div>
 </div><!-- end center content -->
 <div style="clear:both;"></div>
@@ -71,6 +71,7 @@ $( document ).ready(function() {
 	$(".sidebar").click( function(){ expandSidebar(); } );
 	$(".arrow a").click(function() { loadMainContent("beachlist") });
 	$("#surf").click(function(){loadBeachContent("ljssurf.png") });
+	$("#home").click(function(){loadBeachContent("ljsmain.png") });
 	$("#crowd").click(function(){loadBeachContent("crowd.png") });
 	$("#login a").click( function(){ loadMainContent("LOGIN") });
 	$("#help a").click(function() { loadMainContent("HELP"); }); 
