--- a/public/css/pb.css
+++ b/public/css/pb.css
@@ -38,13 +38,14 @@ background-image: -webkit-linear-gradient(bottom, #FFFFFF 0%, #0EEFE8 100%);
 background-image: linear-gradient(to top, #FFFFFF 0%, #0EEFE8 100%);
 }
 .pagename{
+	display:inline-block;
 	width:50%;
 	font-size: 45px;
 	text-align: center;
 	position:relative;
 	z-index: 2;
 }
-#weather{
+#weatherimg{
 	position:relative;
 	width: 100%;
 	z-index: -10;
@@ -65,6 +66,7 @@ div a{
 
 /*///////////////////////////*/
 .arrow{
+	display:inline-block;
 	width:20%;
 	height: 50px;
 }
