--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,9 +3,13 @@
  *
  *
  */
+html{
+	height: 100%;
+}
 body{
 	position: relative;
     width: 100%;
+    height:100%;
     display: block;
     background: white;/* background color of app*/
     /*background-image: url('/images/bg.jpg');
@@ -65,25 +69,9 @@ body{
 	text-align: right;
 	padding-right: 5px;
 }
-
 #homeimg{
 	width:100%;
 }
-
-/*
-.circle{
-width:300px;
-height:300px;
-
-border-radius: 50%;
-font-size:100px;
-color:#fff; /* center font color
-line-height:300px;
-text-align:right;
-padding-right: 20px;
-background:#F0DE63; /*center circle color
-}
-*/
 #buttonline{
 	width:100%;
 	clear:both;
