--- a/public/css/index.css
+++ b/public/css/index.css
@@ -19,32 +19,36 @@ body{
 /* #### Mobile Phones Portrait #### */
 @media screen and (max-device-width: 480px) and (orientation: portrait){
 .container{ /* main screen size*/
-	width:480px;
+	/*width:480px;*/
+	width:100%;
 }}
 
 /* #### Mobile Phones Landscape #### */
 @media screen and (max-device-width: 640px) and (orientation: landscape){
 .container{ /* main screen size*/
-	width:640px;
+	/*width:640px;*/
+	width: 100%;
 }}
 
 /* #### Mobile Phones Portrait or Landscape #### */
 @media screen and (max-device-width: 640px){
 .container{ /* main screen size*/
-	width:640px;
+	/*width:640px;*/
+	width:100%;
 }}
 
 /* #### iPhone 4+ Portrait or Landscape #### */
 @media screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2){
 .container{ /* main screen size*/
-	width:480px;
+	/*width:480px;*/
+	width:100%;
 }}
 
 /* #### Tablets Portrait or Landscape #### */
 @media screen and (min-device-width: 768px) and (max-device-width: 1024px){
  .container{ /* main screen size*/
 	/*width:768px;*/
-	width:400px; /*standard width*/
+	width:100%; /*standard width*/
 }}
 
 /* #### Desktops #### */
