--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,7 +16,7 @@ body{
     background-size:100% 100%;*/
 }
 /* #### Desktops #### */
-@media screen{
+@media screen and(min-device-width: 768px){
 .container{ /* main screen size*/
 	width:400px;
 }}
