--- a/views/beach.handlebars
+++ b/views/beach.handlebars
@@ -8,11 +8,11 @@
 <div style="clear:both;"></div>
 <div class="centercontent">
 <div class="sidebar">
-	<div class="tab"><div class="iconname" id="weather"><a href='#'>WEATHER</a></div><img src="/images/weathericon.png" class="img-responsive icon"/></div>
-	<div class="tab"><div class="iconname" id="surf"><a href='#'>SURF</a></div><img src="/images/surficon.png" class="img-responsive icon"/></div>
-	<div class="tab"><div class="iconname" id="map"><a href='#'>MAP</a></div><img src="/images/mapicon.png" class="img-responsive icon"/></div>
-	<div class="tab"><div class="iconname" id="activity"><a href='#'>ACTIVITY</a></div><img src="/images/activityicon2.png" class="img-responsive icon"/></div>
-	<div class="tab"><div class="iconname" id="crowd"><a href='#'>CROWD</a></div><img src="/images/crowdicon.png" class="img-responsive icon"/></div>
+	<div class="tab"><div class="iconname" id="weather"><a href='#'><img src="/images/weathericon.png" class="img-responsive icon"/></a></div></div>
+	<div class="tab"><div class="iconname" id="surf"><a href='#'><img src="/images/surficon.png" class="img-responsive icon"/></a></div></div>
+	<div class="tab"><div class="iconname" id="map"><a href='#'><img src="/images/mapicon.png" class="img-responsive icon"/></a></div></div>
+	<div class="tab"><div class="iconname" id="activity"><a href='#'><img src="/images/activityicon2.png" class="img-responsive icon"/></a></div></div>
+	<div class="tab"><div class="iconname" id="crowd"><a href='#'><img src="/images/crowdicon.png" class="img-responsive icon"/></div></a></div>
 	<!--div class="tab"><div class="iconname" id="alert"><a href='#'>ALERT</a></div><img src="/images/alerticon.png" class="icon"/></div-->
 	<!--div class="tab"><div class="iconname" id="help"><a href='#'>HELP</a></div><img src="/images/helpicon.png" class="icon"/></div-->
 </div>
@@ -79,15 +79,15 @@ function expandSidebar(){
 	}
 }
 
-allHide(); //call default
+//allHide(); //call default
 
 $( document ).ready(function() {
-	$(".sidebar").click( function(){ expandSidebar(); } );
+	//$(".sidebar").click( function(){ expandSidebar(); } );
 	$(".arrow a").click(function() { loadMainContent("beachlist") });
 	$(".home a").click(function() { window.location.href="/"; });
-	$("#surf").click(function(){loadBeachContent("ljssurf.png") });
-	$("#weather").click(function(){loadBeachContent("ljsmain.png") });
-	$("#crowd").click(function(){loadBeachContent("crowd.png") });
+	$("#surf a").click(function(){alert("clicked!!");loadBeachContent("ljssurf.png") });
+	$("#weather a").click(function(){loadWeather("ljsmain.png") });
+	$("#crowd a").click(function(){loadBeachContent("crowd.png") });
 	$("#login a").click( function(){ loadMainContent("LOGIN") });
 	$("#help a").click(function() { loadMainContent("HELP"); }); 
 	});
