--- a/public/css/beach.css
+++ b/public/css/beach.css
@@ -16,6 +16,7 @@ body{
 	text-align: center;
 	position:relative;
 	z-index: 2;
+	color:#4682B4;
 }
 #weatherimg{
 	position:relative;
@@ -97,5 +98,5 @@ to {width:50px;}
 	height: 50px;
 }
 div .comment .title .height{
-	font-size:40px;
+	font-size:60px;
 }
