--- a/views/surf.handlebars
+++ b/views/surf.handlebars
@@ -2,8 +2,21 @@
 <div class="comment">{{comment}}</div>
 <div class="height">{{height}}</div>
 
+<div id="beachname"> La Jolla Shores </div>
+<div id="time"> 2:10PM </div>
+<div id="icon"> <img src=sunclouds1.png> </div> 
+<div id="temp"> 72 </div>
+<div id="sunset"> Sunset: 6:02PM </div>
+<div id="sunrise"> Sunrise: 6:27PM </div>
+<div id="high"> 75 </div>
+<div id="low"> 59 </div> 
+
+
 <style>
 div .comment .title .height{
-	font-size:40px;
+	font-size:60px;
+	border-radius:;
 }
+
+
 </style>
