--- a/public/css/beach.css
+++ b/public/css/beach.css
@@ -1,12 +1,12 @@
 body{
 	background: #00C9AD;
 	text-decoration: none;
-	background-image: -ms-linear-gradient(bottom, #FFFFFF 0%, #0EEFE8 100%);
-	background-image: -moz-linear-gradient(bottom, #FFFFFF 0%, #0EEFE8 100%);
-	background-image: -o-linear-gradient(bottom, #FFFFFF 0%, #0EEFE8 100%);
-	background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #FFFFFF), color-stop(1, #0EEFE8));
-	background-image: -webkit-linear-gradient(bottom, #FFFFFF 0%, #0EEFE8 100%);
-	background-image: linear-gradient(to top, #FFFFFF 0%, #0EEFE8 100%);
+	background-image: -ms-linear-gradient(bottom, #87ceeb 0%, #0EEFE8 100%);
+	background-image: -moz-linear-gradient(bottom, #87ceeb 0%, #0EEFE8 100%);
+	background-image: -o-linear-gradient(bottom, #87ceeb 0%, #0EEFE8 100%);
+	background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #87ceeb), color-stop(1, #0EEFE8));
+	background-image: -webkit-linear-gradient(bottom, #87ceeb 0%, #0EEFE8 100%);
+	background-image: linear-gradient(to top, #87ceeb 0%, #0EEFE8 100%);
 }
 .pagename{
 	display:inline-block;
