--- a/views/weather.handlebars
+++ b/views/weather.handlebars
@@ -1,8 +1,8 @@
-<div id="weather">
+<div class="weather">
 
 <div id="beachname"> La Jolla Shores </div>
 <div id="time"> 2:10PM </div>
-<div id="icon"> <img src=sunclouds1.png> </div> 
+<div id="icon"> <img src="/images/sunclouds1.png"> </div> 
 <div id="temp"> 72 </div>
 <div id="sunrise"> Sunrise: 6:27PM </div>
 <div id="sunset"> Sunset: 6:02PM </div>
@@ -15,19 +15,23 @@
 div .comment .title .height{
 	font-size:40px;
 	border-radius:;
+
+}
+
+.weather{
+	vertical-align: middle;
+	font-size: 40px;
 }
 
 #beachname {
-	font-size:40px;
-	font-family:decker;
 }
 
 #time{
-
 }
+	
 
 #icon{
-
+	
 }
 
 #temp{
@@ -35,15 +39,14 @@ div .comment .title .height{
 }
 
 #sunrise{
-
+	
 }
 
 #sunset{
-
-}
+	}
 
 #highlow{
-
+	
 }
 
 
