--- a/views/beach.handlebars
+++ b/views/beach.handlebars
@@ -14,7 +14,7 @@
 	<div class="tab"><div class="iconname" id="activity"><a href='#'><img src="/images/activityicon2.png" class="img-responsive icon"/></a></div></div>
 	<div class="tab"><div class="iconname" id="crowd"><a href='#'><img src="/images/crowdicon.png" class="img-responsive icon"/></div></a></div>
 	<!--div class="tab"><div class="iconname" id="alert"><a href='#'>ALERT</a></div><img src="/images/alerticon.png" class="icon"/></div-->
-	<div class="tab"><div class="iconname" id="help"><a href='#'>HELP</a></div><img src="/images/helpicon.png" class="icon"/></div>
+	<!--div class="tab"><div class="iconname" id="help"><a href='#'>HELP</a></div><img src="/images/helpicon.png" class="icon"/></div-->
 </div>
 <div style="clear:both;"></div>
 <div class="sbcontent">
