crowd page content

--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -1,10 +1,13 @@
 <div id="crowd-o-meter">
 
 <div id="beachname"> La Jolla Shores </div>
+<div id="crowdpage"> Crowd-O-Meter </div>
 <div id="crowd"> High: Packed like Sardines </div>
-<div id="time"> 2:10PM </div>
-<div id="besttime"> Before 9:30AM + After 4:00PM </div> 
-<div id="worsetime"> 11:00AM-2:30PM </div>
+<div id="time"> TIME: 2:10PM </div>
+<div id="bttitle"> BEST TIME: <br> </div> 
+<div id="besttime"> Before 9:30AM + After 4:00PM </div>
+<div id="wttitle"> WORST TIME: <br> </div> 
+<div id="worsttime">11:00AM-2:30PM </div>
 <div id="hottiealert"> Hottie Alert: <img src= </div>
 
 </div>
@@ -13,32 +16,44 @@
 <style>
 div .comment .title .height{
 	font-size:40px;
-	border-radius:;
+	border-radius: 2px;
 }
 
 #beachname {
 	font-size:40px;
-	font-family:decker;
+	text-align: center;
+}
+
+#crowdpage{
+	text-align: center;
 }
 
 #crowd{
-
+	text-align: center;
 }
 
 #time{
+	text-align: center;
+}
 
+#bttitle{
+	text-align: center;
 }
 
 #besttime{
-
+	text-align: right;
 }
 
-#worsetime{
+#wttitle{
+	text-align: center;
+}
 
+#worsttime{
+	text-align: right;
 }
 
 #hottiealert{
-
+	text-align: center;
 }
 
 
