--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -15,6 +15,7 @@
 
 <style>
 div .comment .title .height{
+	font-family: 'Montserrat', sans-serif;
 	font-size:40px;
 	border-radius: 2px;
 }
@@ -31,30 +32,38 @@ div .comment .title .height{
 
 #crowd{
 	text-align: center;
+	font-size: 14px;
 }
 
 #time{
 	text-align: center;
+	font-size: 14px;
 }
 
 #bttitle{
 	text-align: center;
+	font-size: 14px;
 }
 
 #besttime{
 	text-align: right;
+	font-size: 14px;
 }
 
 #wttitle{
 	text-align: center;
+	font-size: 14px;
 }
 
 #worsttime{
 	text-align: right;
+	font-size: 14px;
 }
 
 #hottiealert{
 	text-align: center;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 14px;
 }
 
 
