--- a/public/css/beachlist.css
+++ b/public/css/beachlist.css
@@ -33,7 +33,7 @@ body{
 }
 li img{
 	/* left over 25% width*/
-	margin-right:25px;
+	margin-right:5%;
 	margin-top:2px;
 	width:55px;
 	height:55px;
