changed startup button

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -66,7 +66,7 @@ body{
 	-webkit-border-radius: 12px; /* Saf3-4 */
   	border-radius: 12px; /* Opera 10.5, IE 9, Saf5, Chrome */	
   	height: 60px; /* height for all three buttons on front page*/
-	background: #00C9AD;/*default background color for buttons*/
+	background: #F0DE62;/*default background color for buttons*/
 }
 #tagline{
 	font-size: 26px;
