--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -1,8 +1,9 @@
 <link href="/css/beachlist.css" rel="stylesheet">
 
+<div class="button" id="back"><a href="#">Back</a></div>
+
 <div class="button" id="blist">	
 	<ul>
-		<li><div class="button" id="back"><a href="#">Back</a></div></li>
 		<li><div class="button" id="LaJolla"><a href="#">La Jolla Shores </a><img class="img-responsive" src="/images/sun.png"></div></li>
 		<li><div class="button" id="Oceanside"><a href="#"> Oceanside Beach</a><img class="img-responsive" src="/images/overcast.png"></div></li>
 		<li><div class="button" id="pb"><a href="#"> Pacific Beach</a><img class="img-responsive" src="/images/sun.png"></div></li>
