--- a/views/weather.handlebars
+++ b/views/weather.handlebars
@@ -17,19 +17,14 @@ div .comment .title .height{
 	border-radius:;
 
 }
-
 .weather{
 	text-align: center;
 	font-size: 40px;
 }
-
 #beachname {
 }
-
 #time{
-}
-	
-
+}	
 #icon{
 	display:inline-block;
 }
@@ -38,13 +33,10 @@ img{
 	height:170px;
 }
 #temp{
-
 }
-
 #sunrise{
 	font-size: 25px;
 }
-
 #sunset{
 	font-size: 25px;
 	}
@@ -54,8 +46,9 @@ img{
 }
 </style>
 <script>
+//screen width
 var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
-console.log(width);
+
 function getWeather(){
 	var location;
 	var name = "{{beachname}}"
