--- a/views/weather.handlebars
+++ b/views/weather.handlebars
@@ -1,5 +1,6 @@
-<div class="weather">
+<link href="/css/weather.css" rel="stylesheet">
 
+<div class="weather">
 <div id="beachname"> La Jolla Shores </div>
 <div id="time"> 2:10PM </div>
 <div id="icon"> <img src="/images/sunclouds1.png" class="img-responsive">  </div> 
@@ -10,41 +11,6 @@
 <div id="order"></div>
 </div>
 
-
-<style>
-div .comment .title .height{
-	font-size:40px;
-	border-radius:;
-
-}
-.weather{
-	text-align: center;
-	font-size: 40px;
-}
-#beachname {
-}
-#time{
-}	
-#icon{
-	display:inline-block;
-}
-img{
-	width:170px;
-	height:170px;
-}
-#temp{
-}
-#sunrise{
-	font-size: 25px;
-}
-#sunset{
-	font-size: 25px;
-	}
-
-#highlow{
-	
-}
-</style>
 <script>
 //screen width
 var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
